Bug 404368 - "xulrunner application.ini --version outputs: "(null)" if copyright field is not defined" [p=arno.@no-log.org (arno.) r=bsmedberg a1.9=schrep]